<resources>
    <string name="app_name">Game Diary</string>
    <string name="app_logo_description">앱 로고</string>
    <string name="onboarding_title_1">Game Diary</string>
    <string name="onboarding_desc_1">나만의 게임 일기에 오신 것을 환영합니다</string>
    <string name="onboarding_title_2">게임 기록</string>
    <string name="onboarding_desc_2">플레이한 게임에 별점과 한줄평을 남겨보세요</string>
    <string name="onboarding_title_3">시작할 준비 완료!</string>
    <string name="onboarding_desc_3">지금 바로 게임 보관함을 만들어보세요</string>
    <string name="onboarding_next">다음</string>
    <string name="onboarding_start">시작하기</string>
    <string name="login_title">로그인</string>
    <string name="login_account_label">계정</string>
    <string name="login_pin_hint">비밀번호 (숫자 4자리)</string>
    <string name="login_keep">로그인 유지</string>
    <string name="login_button">로그인</string>
    <string name="login_signup">회원가입</string>
    <string name="login_need_signup">회원가입 후 로그인할 수 있어요</string>
    <string name="login_pin_empty">비밀번호를 입력해주세요</string>
    <string name="login_failed">비밀번호가 일치하지 않아요</string>
    <string name="login_success">환영합니다, %s 님!</string>
    <string name="signup_title">회원가입</string>
    <string name="signup_id_hint">계정 아이디 (영문/숫자/밑줄)</string>
    <string name="signup_nickname_hint">별명</string>
    <string name="signup_pin_hint">비밀번호 (숫자 4자리)</string>
    <string name="signup_pin_confirm_hint">비밀번호 확인 (다시 입력)</string>
    <string name="signup_button">가입하기</string>
    <string name="signup_id_empty">아이디를 입력해주세요</string>
    <string name="signup_id_invalid">아이디는 영문, 숫자, 밑줄(_)만 쓸 수 있어요</string>
    <string name="signup_nickname_empty">별명을 입력해주세요</string>
    <string name="signup_pin_invalid">비밀번호는 숫자 4자리로 만들어주세요</string>
    <string name="signup_pin_mismatch">비밀번호가 서로 달라요</string>
    <string name="signup_id_taken">이미 있는 아이디예요</string>
    <string name="signup_nickname_taken">이미 있는 별명이에요</string>
    <string name="signup_success">%s 님, 가입을 환영해요!</string>
    <string name="profile_edit_title">프로필 편집</string>
    <string name="profile_nickname_label">별명</string>
    <string name="profile_nickname_hint">화면에 보여줄 별명</string>
    <string name="profile_bio_label">한 줄 소개</string>
    <string name="profile_bio_hint">나를 한 줄로 소개해보세요 (선택)</string>
    <string name="profile_avatar_label">아바타 색</string>
    <string name="profile_save">저장</string>
    <string name="profile_nickname_empty">별명을 입력해주세요</string>
    <string name="profile_saved">프로필을 저장했어요</string>
    <string name="profile_avatar_placeholder">?</string>
    <string name="profile_bio_empty_hint">한 줄 소개를 추가해보세요</string>
    <string name="attendance_summary">🔥 %1$d일 연속 · 누적 %2$d회 방문</string>
    <string name="attendance_toast">오늘도 방문했어요! %d일 연속 🔥</string>
    <string name="home_action_logout">로그아웃</string>
    <string name="home_action_delete_account">계정 삭제</string>
    <string name="logout_confirm_title">로그아웃</string>
    <string name="logout_confirm_message">로그아웃할까요?</string>
    <string name="logout_confirm_ok">로그아웃</string>
    <string name="delete_account_confirm_title">계정 삭제</string>
    <string name="delete_account_confirm_message">\'%s\' 계정의 모든 기록이 사라져요. 정말 삭제할까요?</string>
    <string name="delete_account_confirm_ok">삭제</string>
    <string name="user_profile_title">프로필</string>
    <string name="user_profile_reviews_title">작성한 리뷰</string>
    <string name="user_profile_no_reviews">아직 작성한 리뷰가 없어요</string>
    <string name="following_feed_title">팔로잉 피드</string>
    <string name="following_feed_empty">팔로우한 사람의 리뷰가 아직 없어요\n랭킹에서 다른 유저를 팔로우해보세요</string>
    <string name="community_ranking_button">🏆 랭킹</string>
    <string name="community_new_reviews">새 리뷰 %d개 ↑</string>
    <string name="feed_like_desc">좋아요</string>
    <string name="screenshot_zoom_hint">탭하여 닫기</string>
    <string name="home_back_to_exit">한 번 더 누르면 종료됩니다</string>
    <string name="ranking_title">유저 랭킹</string>
    <string name="ranking_review_count">리뷰 %d개</string>
    <string name="ranking_me_badge">(나)</string>
    <string name="ranking_empty">아직 유저가 없어요</string>
    <string name="ranking_follow">팔로우</string>
    <string name="ranking_following">팔로잉</string>
    <string name="profile_following_count">팔로잉 %d</string>
    <string name="profile_follower_count">팔로워 %d</string>
    <string name="follow_list_following_title">팔로잉</string>
    <string name="follow_list_followers_title">팔로워</string>
    <string name="follow_list_following_empty">아직 팔로우한 사람이 없어요</string>
    <string name="follow_list_followers_empty">아직 팔로워가 없어요</string>
    <string name="home_action_reset">전체 초기화 (테스트용)</string>
    <string name="reset_confirm_title">전체 초기화</string>
    <string name="reset_confirm_message">모든 계정과 저장된 데이터를 지웁니다. 새로 설치한 것과 같은 상태가 돼요. 계속할까요?</string>
    <string name="reset_confirm_ok">초기화</string>
    <string name="main_title">내 게임 일기</string>
    <string name="game_cover_description">게임 표지</string>
    <string name="main_add_game">게임 추가</string>
    <string name="library_title">내 게임 일지</string>
    <string name="library_filter_all">전체</string>
    <string name="library_empty">이 상태의 게임이 없어요</string>
    <string name="library_search_hint">게임 제목 검색</string>
    <string name="library_recent_search_label">최근 검색</string>
    <string name="library_recent_search_clear">지우기</string>
    <string name="library_search_empty">검색 결과가 없어요</string>
    <string name="library_search_press_enter">한글은 검색(→) 또는 엔터로 검색하세요</string>
    <string name="library_searching">검색 중…</string>
    <string name="library_sort">정렬</string>
    <string name="library_view_toggle">보기 전환</string>
    <string name="home_stat_total">전체</string>
    <string name="home_stat_completed">완료</string>
    <string name="home_stat_playing">플레이중</string>
    <string name="home_stat_backlog">찜 목록</string>
    <string name="home_rating_distribution">별점 분포</string>
    <string name="stats_title">통계</string>
    <string name="stats_summary">상태별 게임 수</string>
    <string name="stats_status_total">전체</string>
    <string name="stats_genre_distribution">장르 분포</string>
    <string name="stats_unrated">미평가</string>
    <string name="home_section_diary">내 일기</string>
    <string name="home_section_recent">최근 본 게임</string>
    <string name="home_section_library">내 게임 일지</string>
    <string name="home_section_timeline">최근 활동</string>
    <string name="home_section_stats">내 통계</string>
    <string name="tab_diary">내 일지</string>
    <string name="tab_community">커뮤니티</string>
    <string name="home_more">더 보기</string>
    <string name="timeline_title">최근 활동</string>
    <string name="timeline_added">%s 을(를) 보관함에 추가했어요</string>
    <string name="timeline_completed">%s 클리어 완료!</string>
    <string name="timeline_reviewed">%s 리뷰를 남겼어요</string>
    <string name="timeline_played_badge">PLAY</string>
    <string name="diary_action_delete">삭제</string>
    <string name="diary_action_share">공유</string>
    <string name="diary_action_detail">상세 보기</string>
    <string name="delete_confirm_title">게임 삭제</string>
    <string name="delete_confirm_message">\'%s\'을(를) 보관함에서 삭제할까요?</string>
    <string name="delete_confirm_ok">삭제</string>
    <string name="delete_undo_message">\'%s\' 삭제됨</string>
    <string name="delete_undo_action">실행취소</string>
    <string name="trash_title">휴지통</string>
    <string name="trash_menu_label">휴지통</string>
    <string name="trash_empty">휴지통이 비어 있어요</string>
    <string name="trash_restore">복원</string>
    <string name="trash_delete">영구삭제</string>
    <string name="trash_empty_action">비우기</string>
    <string name="trash_empty_confirm_title">휴지통 비우기</string>
    <string name="trash_empty_confirm_message">휴지통의 모든 게임을 영구삭제할까요?</string>
    <string name="trash_delete_confirm_message">\'%s\'을(를) 영구삭제할까요?</string>
    <string name="trash_days_left">%d일 후 삭제</string>
    <string name="rawg_search_title">게임 검색</string>
    <string name="explore_title">탐색</string>
    <string name="add_game_sheet_title">게임 추가</string>
    <string name="add_game_sheet_search">🔍 검색으로 추가</string>
    <string name="add_game_sheet_explore">🧭 둘러보기 (인기·신작·장르)</string>
    <string name="add_game_sheet_manual">✏️ 직접 입력</string>
    <string name="add_game_title">게임 추가</string>
    <string name="add_game_hint_title">게임 제목</string>
    <string name="add_game_label_genre">장르</string>
    <string name="add_game_label_platform">플랫폼</string>
    <string name="add_game_hint_store_url">스토어 URL (선택)</string>
    <string name="add_game_button">추가하기</string>
    <string name="add_game_title_required">게임 제목을 입력해주세요</string>
    <string name="add_game_pick_cover">표지 선택</string>
    <string name="review_title">리뷰 작성</string>
    <string name="review_hint">한줄평을 입력하세요</string>
    <string name="review_save">저장</string>
    <string name="review_rating_label">별점: ★ %s</string>
    <string name="review_discard_title">저장하지 않고 나가기</string>
    <string name="review_discard_message">변경한 내용이 아직 저장되지 않았어요. 그냥 나갈까요?</string>
    <string name="review_discard_ok">나가기</string>
    <string name="detail_title">게임 상세</string>
    <string name="detail_write_review">리뷰 작성</string>
    <string name="detail_edit_review">리뷰 수정</string>
    <string name="detail_share">공유</string>
    <string name="detail_open_store">스토어 열기</string>
    <string name="detail_no_store_url">스토어 링크가 없는 게임입니다</string>
    <string name="detail_screenshot">스크린샷</string>
    <string name="detail_screenshots_label">스크린샷</string>
    <string name="detail_change_status">상태 변경</string>
    <string name="detail_translate_show">🌐 번역 보기</string>
    <string name="detail_translate_original">🌐 원문 보기</string>
    <string name="detail_translate_loading">번역 중…</string>
    <string name="detail_translate_failed">번역에 실패했어요</string>
    <string name="detail_others_title">다른 사람들의 평가</string>
    <string name="detail_total_average">전체 평균 ★ %1$s · %2$d명</string>
    <string name="detail_others_empty">아직 다른 사람의 평가가 없어요</string>
    <string name="review_board_empty">아직 다른 사람의 평가가 없어요</string>
    <string name="screenshot_title">스크린샷</string>
    <string name="screenshot_pick_image">갤러리에서 선택</string>
    <string name="screenshot_empty">아직 추가한 사진이 없습니다</string>
    <string name="screenshot_preview_description">선택한 스크린샷 미리보기</string>
    <string name="screenshot_no_gallery">갤러리 앱을 찾을 수 없습니다</string>
    <string name="about_title">앱 정보</string>
    <string name="about_app_name">Game Diary</string>
    <string name="about_version">버전 1.0.0</string>
    <string name="about_description">나만의 게임 일기 — 별점과 한줄평으로 기록하는 개인 게임 일지</string>
    <string name="about_developer_github">개발자 GitHub</string>
    <string name="about_send_feedback">개발자에게 피드백 보내기</string>
    <string name="about_menu_label">앱 정보</string>
    <string name="about_no_browser">브라우저 앱을 찾을 수 없습니다</string>
    <string name="about_no_mail">메일 앱을 찾을 수 없습니다</string>
    <string name="about_feedback_subject">[Game Diary] 피드백</string>
    <string name="about_feedback_body">앱을 사용하시며 느낀 점을 자유롭게 적어주세요.\n\n</string>
    <string name="about_feedback_chooser_title">메일 앱 선택</string>
</resources>